res/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Parser.y
-----------------------------------------------------------------------------

state 9 contains 1 reduce/reduce conflicts.
state 27 contains 1 shift/reduce conflicts.
state 121 contains 21 shift/reduce conflicts.
state 137 contains 21 shift/reduce conflicts.
state 141 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parse -> Chunk                              (0)
	Chunk -> Block                                     (1)
	Block -> StatList Retstat                          (2)
	Block -> StatList                                  (3)
	StatList -> Stat                                   (4)
	StatList -> Stat StatList                          (5)
	Stat -> ';'                                        (6)
	Stat -> Varlist '=' Explist                        (7)
	Stat -> Functioncall                               (8)
	Stat -> Label                                      (9)
	Stat -> "break"                                    (10)
	Stat -> "goto" Name                                (11)
	Stat -> "do" Block "end"                           (12)
	Stat -> "while" Exp "do" Block "end"               (13)
	Stat -> "repeat" Block "until" Exp                 (14)
	Stat -> "if" Exp "then" Block ElseIfList ElseBlock "end"   (15)
	Stat -> "for" Name '=' Exp ',' Exp ',' Exp "do" Block "end"   (16)
	Stat -> "for" Name '=' Exp ',' Exp "do" Block "end"   (17)
	Stat -> "for" Namelist "in" Explist "do" Block "end"   (18)
	Stat -> "function" Funcname Funcbody               (19)
	Stat -> "local" "function" Name Funcbody           (20)
	Stat -> "local" Attnamelist '=' Explist            (21)
	Stat -> "local" Attnamelist                        (22)
	ElseIfList ->                                      (23)
	ElseIfList -> "elseif" Exp "then" Block ElseIfList   (24)
	ElseBlock ->                                       (25)
	ElseBlock -> "else" Block                          (26)
	Attnamelist -> Name Attrib                         (27)
	Attnamelist -> Name Attrib ',' Attnamelist         (28)
	Attrib -> '<' Name '>'                             (29)
	Attrib ->                                          (30)
	Retstat -> "return" Explist ';'                    (31)
	Retstat -> "return" Explist                        (32)
	Retstat -> "return" ';'                            (33)
	Retstat -> "return"                                (34)
	Label -> "::" Name "::"                            (35)
	Funcname -> Name                                   (36)
	Funcname -> Name FuncnameDotList ':' Name          (37)
	Funcname -> Name FuncnameDotList                   (38)
	FuncnameDotList -> '.' Name                        (39)
	FuncnameDotList -> FuncnameDotList '.' Name        (40)
	Varlist -> Var                                     (41)
	Varlist -> Var ',' Varlist                         (42)
	Var -> Name                                        (43)
	Var -> Prefixexp '[' Exp ']'                       (44)
	Var -> Prefixexp '.' Name                          (45)
	Namelist -> Name                                   (46)
	Namelist -> Name ',' Namelist                      (47)
	Explist -> Exp                                     (48)
	Explist -> Exp ',' Explist                         (49)
	Exp -> "nil"                                       (50)
	Exp -> "false"                                     (51)
	Exp -> "true"                                      (52)
	Exp -> Float                                       (53)
	Exp -> Integer                                     (54)
	Exp -> LiteralString                               (55)
	Exp -> "..."                                       (56)
	Exp -> Functiondef                                 (57)
	Exp -> Prefixexp                                   (58)
	Exp -> Tableconstructor                            (59)
	Exp -> Exp Binop Exp                               (60)
	Exp -> Unop Exp                                    (61)
	Prefixexp -> Var                                   (62)
	Prefixexp -> Functioncall                          (63)
	Prefixexp -> '(' Exp ')'                           (64)
	Functioncall -> Prefixexp Args                     (65)
	Functioncall -> Prefixexp ':' Name Args            (66)
	Args -> '(' Explist ')'                            (67)
	Args -> Tableconstructor                           (68)
	Args -> LiteralString                              (69)
	Functiondef -> "function" Funcbody                 (70)
	Funcbody -> '(' Parlist ')' Block "end"            (71)
	Parlist -> Namelist ',' "..."                      (72)
	Parlist -> "..."                                   (73)
	Tableconstructor -> '{' Fieldlist '}'              (74)
	Fieldlist -> Field                                 (75)
	Fieldlist -> Field Fieldsep Fieldlist              (76)
	Fieldlist -> Field Fieldsep                        (77)
	Field -> '[' Exp ']' '=' Exp                       (78)
	Field -> Name '=' Exp                              (79)
	Field -> Exp                                       (80)
	Fieldsep -> ','                                    (81)
	Fieldsep -> ';'                                    (82)
	Binop -> '+'                                       (83)
	Binop -> '-'                                       (84)
	Binop -> '*'                                       (85)
	Binop -> '/'                                       (86)
	Binop -> "//"                                      (87)
	Binop -> '^'                                       (88)
	Binop -> '%'                                       (89)
	Binop -> '&'                                       (90)
	Binop -> '~'                                       (91)
	Binop -> '|'                                       (92)
	Binop -> ">>"                                      (93)
	Binop -> "<<"                                      (94)
	Binop -> ".."                                      (95)
	Binop -> '<'                                       (96)
	Binop -> "<="                                      (97)
	Binop -> '>'                                       (98)
	Binop -> ">="                                      (99)
	Binop -> "=="                                      (100)
	Binop -> "~="                                      (101)
	Binop -> "and"                                     (102)
	Binop -> "or"                                      (103)
	Unop -> '-'                                        (104)
	Unop -> "not"                                      (105)
	Unop -> '#'                                        (106)
	Unop -> '~'                                        (107)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	"and"          { TokenAnd }
	"break"        { TokenBreak }
	"do"           { TokenDo }
	"else"         { TokenElse }
	"elseif"       { TokenElseif }
	"end"          { TokenEnd }
	"false"        { TokenFalse }
	"for"          { TokenFor }
	"function"     { TokenFunction }
	"goto"         { TokenGoto }
	"if"           { TokenIf }
	"in"           { TokenIn }
	"local"        { TokenLocal }
	"nil"          { TokenNil }
	"not"          { TokenNot }
	"or"           { TokenOr }
	"repeat"       { TokenRepeat }
	"return"       { TokenReturn }
	"then"         { TokenThen }
	"true"         { TokenTrue }
	"until"        { TokenUntil }
	"while"        { TokenWhile }
	'+'            { TokenAdd }
	'-'            { TokenMinus }
	'*'            { TokenMutiply }
	'/'            { TokenDevide }
	'%'            { TokenModulus }
	'^'            { TokenPower }
	'#'            { TokenLength }
	'&'            { TokenBitwiseAnd }
	'~'            { TokenBitwiseNot }
	'|'            { TokenBitwiseOr }
	"<<"           { TokenLeftShift }
	">>"           { TokenRightShift }
	"//"           { TokenFloorDivision }
	"=="           { TokenEquals }
	"~="           { TokenNotEquals }
	"<="           { TokenLessThanEquals }
	">="           { TokenGreaterThanEquals }
	'<'            { TokenLessThan }
	'>'            { TokenGreaterThan }
	'='            { TokenAssign }
	'('            { TokenLeftParentheses }
	')'            { TokenRightParentheses }
	'{'            { TokenLeftBrace }
	'}'            { TokenRightBrace }
	'['            { TokenLeftBracket }
	']'            { TokenRightBracket }
	"::"           { TokenDoubleColon }
	';'            { TokenSemicolon }
	':'            { TokenColon }
	','            { TokenComma }
	'.'            { TokenDot }
	".."           { TokenConcat }
	"..."          { TokenVararg }
	Integer        { TokenInteger $$ }
	Float          { TokenFloat $$ }
	Name           { TokenIdentifier $$ }
	LiteralString  { TokenString $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parse    rule  0
	Chunk           rule  1
	Block           rules 2, 3
	StatList        rules 4, 5
	Stat            rules 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22
	ElseIfList      rules 23, 24
	ElseBlock       rules 25, 26
	Attnamelist     rules 27, 28
	Attrib          rules 29, 30
	Retstat         rules 31, 32, 33, 34
	Label           rule  35
	Funcname        rules 36, 37, 38
	FuncnameDotList rules 39, 40
	Varlist         rules 41, 42
	Var             rules 43, 44, 45
	Namelist        rules 46, 47
	Explist         rules 48, 49
	Exp             rules 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61
	Prefixexp       rules 62, 63, 64
	Functioncall    rules 65, 66
	Args            rules 67, 68, 69
	Functiondef     rule  70
	Funcbody        rule  71
	Parlist         rules 72, 73
	Tableconstructor rule  74
	Fieldlist       rules 75, 76, 77
	Field           rules 78, 79, 80
	Fieldsep        rules 81, 82
	Binop           rules 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103
	Unop            rules 104, 105, 106, 107

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parse -> . Chunk                             (rule 0)

	"break"        shift, and enter state 10
	"do"           shift, and enter state 11
	"for"          shift, and enter state 12
	"function"     shift, and enter state 13
	"goto"         shift, and enter state 14
	"if"           shift, and enter state 15
	"local"        shift, and enter state 16
	"repeat"       shift, and enter state 17
	"while"        shift, and enter state 18
	'('            shift, and enter state 19
	"::"           shift, and enter state 20
	';'            shift, and enter state 21
	Name           shift, and enter state 22

	Chunk          goto state 23
	Block          goto state 2
	StatList       goto state 3
	Stat           goto state 4
	Label          goto state 5
	Varlist        goto state 6
	Var            goto state 7
	Prefixexp      goto state 8
	Functioncall   goto state 9

State 1

	Chunk -> . Block                                    (rule 1)

	"break"        shift, and enter state 10
	"do"           shift, and enter state 11
	"for"          shift, and enter state 12
	"function"     shift, and enter state 13
	"goto"         shift, and enter state 14
	"if"           shift, and enter state 15
	"local"        shift, and enter state 16
	"repeat"       shift, and enter state 17
	"while"        shift, and enter state 18
	'('            shift, and enter state 19
	"::"           shift, and enter state 20
	';'            shift, and enter state 21
	Name           shift, and enter state 22

	Block          goto state 2
	StatList       goto state 3
	Stat           goto state 4
	Label          goto state 5
	Varlist        goto state 6
	Var            goto state 7
	Prefixexp      goto state 8
	Functioncall   goto state 9

State 2

	Chunk -> Block .                                    (rule 1)

	%eof           reduce using rule 1


State 3

	Block -> StatList . Retstat                         (rule 2)
	Block -> StatList .                                 (rule 3)

	"else"         reduce using rule 3
	"elseif"       reduce using rule 3
	"end"          reduce using rule 3
	"return"       shift, and enter state 68
	"until"        reduce using rule 3
	%eof           reduce using rule 3

	Retstat        goto state 67

State 4

	StatList -> Stat .                                  (rule 4)
	StatList -> Stat . StatList                         (rule 5)

	"break"        shift, and enter state 10
	"do"           shift, and enter state 11
	"else"         reduce using rule 4
	"elseif"       reduce using rule 4
	"end"          reduce using rule 4
	"for"          shift, and enter state 12
	"function"     shift, and enter state 13
	"goto"         shift, and enter state 14
	"if"           shift, and enter state 15
	"local"        shift, and enter state 16
	"repeat"       shift, and enter state 17
	"return"       reduce using rule 4
	"until"        reduce using rule 4
	"while"        shift, and enter state 18
	'('            shift, and enter state 19
	"::"           shift, and enter state 20
	';'            shift, and enter state 21
	Name           shift, and enter state 22
	%eof           reduce using rule 4

	StatList       goto state 66
	Stat           goto state 4
	Label          goto state 5
	Varlist        goto state 6
	Var            goto state 7
	Prefixexp      goto state 8
	Functioncall   goto state 9

State 5

	Stat -> Label .                                     (rule 9)

	"break"        reduce using rule 9
	"do"           reduce using rule 9
	"else"         reduce using rule 9
	"elseif"       reduce using rule 9
	"end"          reduce using rule 9
	"for"          reduce using rule 9
	"function"     reduce using rule 9
	"goto"         reduce using rule 9
	"if"           reduce using rule 9
	"local"        reduce using rule 9
	"repeat"       reduce using rule 9
	"return"       reduce using rule 9
	"until"        reduce using rule 9
	"while"        reduce using rule 9
	'('            reduce using rule 9
	"::"           reduce using rule 9
	';'            reduce using rule 9
	Name           reduce using rule 9
	%eof           reduce using rule 9


State 6

	Stat -> Varlist . '=' Explist                       (rule 7)

	'='            shift, and enter state 65


State 7

	Varlist -> Var .                                    (rule 41)
	Varlist -> Var . ',' Varlist                        (rule 42)
	Prefixexp -> Var .                                  (rule 62)

	'='            reduce using rule 41
	'('            reduce using rule 62
	'{'            reduce using rule 62
	'['            reduce using rule 62
	':'            reduce using rule 62
	','            shift, and enter state 64
	'.'            reduce using rule 62
	LiteralString  reduce using rule 62


State 8

	Var -> Prefixexp . '[' Exp ']'                      (rule 44)
	Var -> Prefixexp . '.' Name                         (rule 45)
	Functioncall -> Prefixexp . Args                    (rule 65)
	Functioncall -> Prefixexp . ':' Name Args           (rule 66)

	'('            shift, and enter state 59
	'{'            shift, and enter state 40
	'['            shift, and enter state 60
	':'            shift, and enter state 61
	'.'            shift, and enter state 62
	LiteralString  shift, and enter state 63

	Args           goto state 57
	Tableconstructorgoto state 58

State 9

	Stat -> Functioncall .                              (rule 8)
	Prefixexp -> Functioncall .                         (rule 63)

	"break"        reduce using rule 8
	"do"           reduce using rule 8
	"else"         reduce using rule 8
	"elseif"       reduce using rule 8
	"end"          reduce using rule 8
	"for"          reduce using rule 8
	"function"     reduce using rule 8
	"goto"         reduce using rule 8
	"if"           reduce using rule 8
	"local"        reduce using rule 8
	"repeat"       reduce using rule 8
	"return"       reduce using rule 8
	"until"        reduce using rule 8
	"while"        reduce using rule 8
	'('            reduce using rule 63
			(reduce using rule 8)

	'{'            reduce using rule 63
	'['            reduce using rule 63
	"::"           reduce using rule 8
	';'            reduce using rule 8
	':'            reduce using rule 63
	'.'            reduce using rule 63
	Name           reduce using rule 8
	LiteralString  reduce using rule 63
	%eof           reduce using rule 8


State 10

	Stat -> "break" .                                   (rule 10)

	"break"        reduce using rule 10
	"do"           reduce using rule 10
	"else"         reduce using rule 10
	"elseif"       reduce using rule 10
	"end"          reduce using rule 10
	"for"          reduce using rule 10
	"function"     reduce using rule 10
	"goto"         reduce using rule 10
	"if"           reduce using rule 10
	"local"        reduce using rule 10
	"repeat"       reduce using rule 10
	"return"       reduce using rule 10
	"until"        reduce using rule 10
	"while"        reduce using rule 10
	'('            reduce using rule 10
	"::"           reduce using rule 10
	';'            reduce using rule 10
	Name           reduce using rule 10
	%eof           reduce using rule 10


State 11

	Stat -> "do" . Block "end"                          (rule 12)

	"break"        shift, and enter state 10
	"do"           shift, and enter state 11
	"for"          shift, and enter state 12
	"function"     shift, and enter state 13
	"goto"         shift, and enter state 14
	"if"           shift, and enter state 15
	"local"        shift, and enter state 16
	"repeat"       shift, and enter state 17
	"while"        shift, and enter state 18
	'('            shift, and enter state 19
	"::"           shift, and enter state 20
	';'            shift, and enter state 21
	Name           shift, and enter state 22

	Block          goto state 56
	StatList       goto state 3
	Stat           goto state 4
	Label          goto state 5
	Varlist        goto state 6
	Var            goto state 7
	Prefixexp      goto state 8
	Functioncall   goto state 9

State 12

	Stat -> "for" . Name '=' Exp ',' Exp ',' Exp "do" Block "end"    (rule 16)
	Stat -> "for" . Name '=' Exp ',' Exp "do" Block "end"    (rule 17)
	Stat -> "for" . Namelist "in" Explist "do" Block "end"    (rule 18)

	Name           shift, and enter state 55

	Namelist       goto state 54

State 13

	Stat -> "function" . Funcname Funcbody              (rule 19)

	Name           shift, and enter state 53

	Funcname       goto state 52

State 14

	Stat -> "goto" . Name                               (rule 11)

	Name           shift, and enter state 51


State 15

	Stat -> "if" . Exp "then" Block ElseIfList ElseBlock "end"    (rule 15)

	"false"        shift, and enter state 32
	"function"     shift, and enter state 33
	"nil"          shift, and enter state 34
	"not"          shift, and enter state 35
	"true"         shift, and enter state 36
	'-'            shift, and enter state 37
	'#'            shift, and enter state 38
	'~'            shift, and enter state 39
	'('            shift, and enter state 19
	'{'            shift, and enter state 40
	"..."          shift, and enter state 41
	Integer        shift, and enter state 42
	Float          shift, and enter state 43
	Name           shift, and enter state 22
	LiteralString  shift, and enter state 44

	Var            goto state 25
	Exp            goto state 50
	Prefixexp      goto state 27
	Functioncall   goto state 28
	Functiondef    goto state 29
	Tableconstructorgoto state 30
	Unop           goto state 31

State 16

	Stat -> "local" . "function" Name Funcbody          (rule 20)
	Stat -> "local" . Attnamelist '=' Explist           (rule 21)
	Stat -> "local" . Attnamelist                       (rule 22)

	"function"     shift, and enter state 48
	Name           shift, and enter state 49

	Attnamelist    goto state 47

State 17

	Stat -> "repeat" . Block "until" Exp                (rule 14)

	"break"        shift, and enter state 10
	"do"           shift, and enter state 11
	"for"          shift, and enter state 12
	"function"     shift, and enter state 13
	"goto"         shift, and enter state 14
	"if"           shift, and enter state 15
	"local"        shift, and enter state 16
	"repeat"       shift, and enter state 17
	"while"        shift, and enter state 18
	'('            shift, and enter state 19
	"::"           shift, and enter state 20
	';'            shift, and enter state 21
	Name           shift, and enter state 22

	Block          goto state 46
	StatList       goto state 3
	Stat           goto state 4
	Label          goto state 5
	Varlist        goto state 6
	Var            goto state 7
	Prefixexp      goto state 8
	Functioncall   goto state 9

State 18

	Stat -> "while" . Exp "do" Block "end"              (rule 13)

	"false"        shift, and enter state 32
	"function"     shift, and enter state 33
	"nil"          shift, and enter state 34
	"not"          shift, and enter state 35
	"true"         shift, and enter state 36
	'-'            shift, and enter state 37
	'#'            shift, and enter state 38
	'~'            shift, and enter state 39
	'('            shift, and enter state 19
	'{'            shift, and enter state 40
	"..."          shift, and enter state 41
	Integer        shift, and enter state 42
	Float          shift, and enter state 43
	Name           shift, and enter state 22
	LiteralString  shift, and enter state 44

	Var            goto state 25
	Exp            goto state 45
	Prefixexp      goto state 27
	Functioncall   goto state 28
	Functiondef    goto state 29
	Tableconstructorgoto state 30
	Unop           goto state 31

State 19

	Prefixexp -> '(' . Exp ')'                          (rule 64)

	"false"        shift, and enter state 32
	"function"     shift, and enter state 33
	"nil"          shift, and enter state 34
	"not"          shift, and enter state 35
	"true"         shift, and enter state 36
	'-'            shift, and enter state 37
	'#'            shift, and enter state 38
	'~'            shift, and enter state 39
	'('            shift, and enter state 19
	'{'            shift, and enter state 40
	"..."          shift, and enter state 41
	Integer        shift, and enter state 42
	Float          shift, and enter state 43
	Name           shift, and enter state 22
	LiteralString  shift, and enter state 44

	Var            goto state 25
	Exp            goto state 26
	Prefixexp      goto state 27
	Functioncall   goto state 28
	Functiondef    goto state 29
	Tableconstructorgoto state 30
	Unop           goto state 31

State 20

	Label -> "::" . Name "::"                           (rule 35)

	Name           shift, and enter state 24


State 21

	Stat -> ';' .                                       (rule 6)

	"break"        reduce using rule 6
	"do"           reduce using rule 6
	"else"         reduce using rule 6
	"elseif"       reduce using rule 6
	"end"          reduce using rule 6
	"for"          reduce using rule 6
	"function"     reduce using rule 6
	"goto"         reduce using rule 6
	"if"           reduce using rule 6
	"local"        reduce using rule 6
	"repeat"       reduce using rule 6
	"return"       reduce using rule 6
	"until"        reduce using rule 6
	"while"        reduce using rule 6
	'('            reduce using rule 6
	"::"           reduce using rule 6
	';'            reduce using rule 6
	Name           reduce using rule 6
	%eof           reduce using rule 6


State 22

	Var -> Name .                                       (rule 43)

	"and"          reduce using rule 43
	"break"        reduce using rule 43
	"do"           reduce using rule 43
	"else"         reduce using rule 43
	"elseif"       reduce using rule 43
	"end"          reduce using rule 43
	"for"          reduce using rule 43
	"function"     reduce using rule 43
	"goto"         reduce using rule 43
	"if"           reduce using rule 43
	"local"        reduce using rule 43
	"or"           reduce using rule 43
	"repeat"       reduce using rule 43
	"return"       reduce using rule 43
	"then"         reduce using rule 43
	"until"        reduce using rule 43
	"while"        reduce using rule 43
	'+'            reduce using rule 43
	'-'            reduce using rule 43
	'*'            reduce using rule 43
	'/'            reduce using rule 43
	'%'            reduce using rule 43
	'^'            reduce using rule 43
	'&'            reduce using rule 43
	'~'            reduce using rule 43
	'|'            reduce using rule 43
	"<<"           reduce using rule 43
	">>"           reduce using rule 43
	"//"           reduce using rule 43
	"=="           reduce using rule 43
	"~="           reduce using rule 43
	"<="           reduce using rule 43
	">="           reduce using rule 43
	'<'            reduce using rule 43
	'>'            reduce using rule 43
	'='            reduce using rule 43
	'('            reduce using rule 43
	')'            reduce using rule 43
	'{'            reduce using rule 43
	'}'            reduce using rule 43
	'['            reduce using rule 43
	']'            reduce using rule 43
	"::"           reduce using rule 43
	';'            reduce using rule 43
	':'            reduce using rule 43
	','            reduce using rule 43
	'.'            reduce using rule 43
	".."           reduce using rule 43
	Name           reduce using rule 43
	LiteralString  reduce using rule 43
	%eof           reduce using rule 43


State 23

	%start_parse -> Chunk .                             (rule 0)

	%eof           accept


State 24

	Label -> "::" Name . "::"                           (rule 35)

	"::"           shift, and enter state 123


State 25

	Prefixexp -> Var .                                  (rule 62)
